implemented get all appointments api
